Compiler plugin configuration changed in order to fix incompatibility of lombok with Java 16